# pytorch-lantern-template

./: .gitignore  README.md  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
test/: README.md  create.sh  env.sh  lint.sh  prepare.sh  run.sh  test.sh  wildfire-0.0.0-py3-none-any.whl
{{cookiecutter.repository_name}}/: .flake8  README.md  README.rst  guild.yml  pyproject.toml  pytest.ini  setup.py
{{cookiecutter.repository_name}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.repository_name}}/data/: __init__.py  augmenter.py  datasets.py  datastreams.py  evaluate_datastreams.py  example.py  train_datastream.py
{{cookiecutter.repository_name}}/debug/: evaluate.py  train.py
{{cookiecutter.repository_name}}/operations/: clean_notebook.py  commit.py  contested.py  evaluate.py  jupyter.py  prepare.py  search_lr.py  train.py
{{cookiecutter.repository_name}}/operations/utilities/: __init__.py  contested_display.py  resize_example.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: __init__.py  log_examples.py  metrics.py  settings.py  train.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/architecture/: __init__.py  feature.py  model.py  prediction.py  resize.py  standardized_image.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/datastream/: __init__.py  datasets.py  evaluate_datastreams.py  gradient_datastream.py  train_datastream.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/model/: __init__.py  model.py  prediction.py  prediction_batch.py  resize.py  standardize.py  standardized_image.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/problem/: datasets.py  example.py  settings.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/tools/: __init__.py  text_.py  unzip.py  verify_splits.py
