[tool.poetry]
name = "pytorch-lantern-template"
version = "0.0.0"
description = "Project template using pytorch-lantern, intended to be instantiated using cookiecutter."
authors = ["NextML AB"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^22.10.0"
poetry = "^1.2.1"
cookiecutter = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
