[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.0"
description = "Placeholder description"
authors = ["{{cookiecutter.author}}"]
readme = "README.md"
repository = "{{cookiecutter.repository}}"
# some classifiers are added automatically, see https://python-poetry.org/docs/pyproject/#classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "{{cookiecutter.package_name}}" },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
numpy = "^1.19.2"
torchvision = "^0.13.0"
opencv-python = "^4.4.0"
pytorch-datastream = "^0.4.0"
pytorch-lantern = "^0.12.0"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
guildai = "0.8.0"
click = "^7.1.1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.2"
notebook = "5.7.8"
jupyter_contrib_nbextensions = "0.5.1"
ipykernel = "^5.4.3"
ipywidgets = "^7.6.3"
poethepoet = "^0.10.0"

[tool.poe.tasks]
cuda11 = "python -m pip install torch==1.12.0+cu113 torchvision==0.13.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
